# Leona

./: .env.prod  .gitignore  README.md  bot.py  pyproject.toml
Russian_data/data/russian/: russian_data.json
data/manager/: plugin_list.yml
data/mcstatus/: server_list.yml
data/trpglogger/: log_record.db
leona/plugins/leona_actions/: main.py
resource/nonebot_plugin_fortune/resource/: fortune_config.json  fortune_data.json
